add start and stop button

--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
   <main id="matter-canvas"></main>
-  <p><button id="reset-btn">RESET</button></p>
+  <div id="button-div">
+    <p><button id="start-btn">START</button></p>
+    <p><button id="reset-btn">RESET</button></p>
+  </div>
   <script src="components/matter.min.js"></script>
   <script src="js/app.js"></script>
 </body>
