add gravity mode

--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
   <div id="button-div">
     <p><button id="start-btn">START</button></p>
     <p><button id="reset-btn">RESET</button></p>
+    <p><input id="gravity-check" type="checkbox">gravity<p>
   </div>
   <script src="components/matter.min.js"></script>
   <script src="js/app.js"></script>
