add setting frame

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,12 @@
 </head>
 <body>
   <main id="matter-canvas"></main>
+  <button id="setting-btn"/></button>
+  <div id="setting-frame">
+    <div id="white-frame">
+      <button id="setting-close-btn"></button>
+    </div>
+  </div>
   <div id="button-div">
     <p><button id="start-btn">START</button></p>
     <p><button id="reset-btn">RESET</button></p>
