--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,12 @@
         </form>
         <p>が</p>
         <form>
-          <select id="obj2-select" name="object2"></select>
+          <select id="obj2-select" name="object2">
+            <option value="floor">床</option>
+            <option value="left">左の壁</option>
+            <option value="right">右の壁</option>
+            <option value="ceil">天井</option>
+          </select>
         </form>
         <p>に</p>
         <form>
