--- a/www/index.html
+++ b/www/index.html
@@ -16,33 +16,50 @@
   <div id="setting-frame">
     <div id="white-frame">
       <button id="setting-close-btn"></button>
-      <div id="target-div">
-        <p>目標設定</p>
-        <form>
-          <select id="obj1-select" name="object1"></select>
-        </form>
-        <p>が</p>
-        <form>
-          <select id="obj2-select" name="object2">
-            <option value="floor">床</option>
-            <option value="left">左の壁</option>
-            <option value="right">右の壁</option>
-            <option value="ceil">天井</option>
-          </select>
-        </form>
-        <p>に</p>
-        <form>
-          <select id="event-select" name="event">
-            <option value="1">衝突</option>
-          </select>
-        </form>
-        <p>までの</p>
-        <form>
-          <select id="target-select" name="target">
-            <option value="1">時間</option>
-          </select>
-        </form>
-        
+      <div id="env-div">
+        <div id="target-div">
+          <p>目標設定</p>
+          <form>
+            <select id="obj1-select" name="object1"></select>
+          </form>
+          <p>が</p>
+          <form>
+            <select id="obj2-select" name="object2">
+              <option value="2">床</option>
+              <option value="3">左の壁</option>
+              <option value="4">右の壁</option>
+              <option value="5">天井</option>
+            </select>
+          </form>
+          <p>に</p>
+          <form>
+            <select id="event-select" name="event">
+              <option value="1">衝突</option>
+            </select>
+          </form>
+          <p>までの</p>
+          <form>
+            <select id="target-select" name="target">
+              <option value="1">時間</option>
+            </select>
+          </form>
+        </div>
+        <div id="fence-div">
+          <table border="0">
+            <tr>
+              <td><p><input id="floor-check" type="checkbox">下<p></td>
+            </tr>
+            <tr>
+              <td><p><input id="left-check" type="checkbox">左<p></td>
+            </tr>
+            <tr>
+              <td><p><input id="right-check" type="checkbox">右<p></td>
+            </tr>
+            <tr>
+              <td><p><input id="ceil-check" type="checkbox">上<p></td>
+            </tr>
+          </table>
+        </div>
       </div>
       <div id="bodies-div">
         <div id="object_div">
