--- a/www/index.html
+++ b/www/index.html
@@ -37,8 +37,8 @@
       if(page.id === "main-page") {
         console.log("open main-page");
         // main_load(document.getElementById("matter-canvas"));
-      } else if (page.id === "hoge-page") {
-        console.log("open hoge-page");
+      } else if (page.id === "test-page") {
+        console.log("open test-page");
       }
     });
   </script>
