--- a/www/test.html
+++ b/www/test.html
@@ -1,4 +1,4 @@
-<ons-page id="hoge-page">
+<ons-page id="test-page">
   <div id="jasmine-container">
   <div class="jasmine_html-reporter">
     <div class="jasmine-banner">
