--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
 
       if(page.id === "main-page") {
         console.log("open main-page");
-        // main_load(document.getElementById("matter-canvas"));
+        //init(document.getElementById("matter-canvas"));
       } else if (page.id === "test-page") {
         console.log("open test-page");
       }
@@ -45,8 +45,8 @@
   
   <script src="components/matter.min.js"></script>
   <script src="js/my-matter.js"></script>
-  <script src="js/app.js"></script>
-
+  <!-- script src="js/app.js"></script -->
+  <script src="js/app_new.js"></script>
   <script src="jasmine/spec/TestSpec.js"></script>
 
 
