--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,8 @@
 
       if(page.id === "main-page") {
         console.log("open main-page");
-        //init(document.getElementById("matter-canvas"));
+        //start_app(document.getElementById("matter-canvas"));
+        test_start();
       } else if (page.id === "test-page") {
         console.log("open test-page");
       }
@@ -52,18 +53,36 @@
 
 </head>
 <body>
-  <ons-page>
-    <ons-toolbar>
-      <div class="center" id="toolbar-title"></div>
-    </ons-toolbar>
-    <ons-tabbar position="auto">
-      <ons-tab label="Tab 1" page="main.html" active>
-      </ons-tab>
-      <ons-tab label="Tab test" page="test.html">
-      </ons-tab>
-    </ons-tabbar>
-    
-  </ons-page>
+  <ons-splitter>
 
+    <ons-splitter-side id="menu" side="left" width="220px"  collapse swipeable>
+      <ons-page>
+      <ons-list>
+        <ons-list-item tappable>
+          オブジェクト追加
+        </ons-list-item>
+      </ons-list>
+    </ons-page>
+    </ons-splitter-side>
+
+    <ons-splitter-content>
+      <ons-page>
+        <ons-toolbar>
+          <div class="center" id="toolbar-title"></div>
+          <div class="left">
+            <ons-toolbar-button id="side-menu-btn">
+              <ons-icon icon="md-menu"></ons-icon>
+            </ons-toolbar-button>
+          </div>
+        </ons-toolbar>
+        <ons-tabbar position="auto">
+          <ons-tab label="Tab 1" page="main.html" active>
+          </ons-tab>
+          <ons-tab label="Tab test" page="test.html">
+          </ons-tab>
+        </ons-tabbar>
+      </ons-page>
+    </ons-splitter-content>
+  </ons-splitter>
 </body>
 </html>
