--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,8 @@
 
       if(page.id === "main-page") {
         console.log("open main-page");
-        //start_app(document.getElementById("matter-canvas"));
+        start_app(document.getElementById("matter-canvas"));
+        app_default_setting();
         test_start();
       } else if (page.id === "test-page") {
         console.log("open test-page");
