--- a/www/main.html
+++ b/www/main.html
@@ -110,4 +110,15 @@
     <p><input id="gravity-check" type="checkbox">gravity<p>
   </div>
   
+  <div id="fab-div">
+    <ons-fab>
+      <ons-icon icon="md-plus" id="add-fab"></ons-icon>
+    </ons-fab>
+    <ons-fab>
+      <ons-icon icon="fa-play" id="start-fab"></ons-icon>
+    </ons-fab>
+    <ons-fab>
+      <ons-icon icon="fa-undo" id="reset-fab"></ons-icon>
+    </ons-fab>
+  </div>
 </ons-page>
