--- a/www/main.html
+++ b/www/main.html
@@ -111,14 +111,14 @@
   </div>
   
   <div id="fab-div">
-    <ons-fab>
-      <ons-icon icon="md-plus" id="add-fab"></ons-icon>
+    <ons-fab id="add-fab">
+      <ons-icon icon="md-plus"></ons-icon>
     </ons-fab>
-    <ons-fab>
-      <ons-icon icon="fa-play" id="start-fab"></ons-icon>
+    <ons-fab id="start-fab">
+      <ons-icon icon="fa-play" (click)="start()"></ons-icon>
     </ons-fab>
-    <ons-fab>
-      <ons-icon icon="fa-undo" id="reset-fab"></ons-icon>
+    <ons-fab id="reset-fab">
+      <ons-icon icon="fa-undo"></ons-icon>
     </ons-fab>
   </div>
 </ons-page>
