--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
       console.log("Onsen UI is ready!");
     });
 
+    let pushed = false;
     document.addEventListener("init", function(event) {
       var page = event.target;
 
@@ -39,12 +40,18 @@
         start_app(document.getElementById("matter-canvas"));
         app_default_setting();
         //test_start();
+        test_make_element();
       } else if (page.id === "test-page") {
         console.log("open test-page");
       }
 
       /// to show the result of the test
-      //document.querySelector('#myNavigator').pushPage('test.html');
+      if (pushed) {
+
+      } else {
+        pushed = true;
+      document.querySelector('#myNavigator').pushPage('test.html');
+      }
     });
 
   
@@ -55,6 +62,7 @@
   <!-- script src="js/app.js"></script -->
   <script src="js/app_new.js"></script>
   <script src="jasmine/spec/TestSpec.js"></script>
+  <script src="jasmine/spec/TestMakeEnvironment.js"></script>
 
 
 </head>
