add change object shape

--- a/www/main.html
+++ b/www/main.html
@@ -132,7 +132,7 @@
       <div class="fukidashi" id="object-select-fukidashi">
         <div>
           <ons-list>
-            <ons-list-item tappable>
+            <ons-list-item tappable onclick="change_shape('rect')">
               <label class="left">
                 <ons-radio name="object-shape" input-id="rect" checked></ons-radio>
               </label>
@@ -140,7 +140,7 @@
                 長方形
               </label>
             </ons-list-item>
-            <ons-list-item tappable>
+            <ons-list-item tappable onclick="change_shape('circ')">
               <label class="left">
                 <ons-radio name="object-shape" input-id="circle"></ons-radio>
               </label>
