add ObjectInfo class

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,13 @@
         start_app(document.getElementById("matter-canvas"));
         app_default_setting();
         //test_start();
-        //test_make_element();
+        test_make_element();
+        setTimeout(() => {
+        if (!pushed) {
+          pushed = true;
+          document.querySelector('#myNavigator').pushPage('test.html');
+        }
+        }, 100);
       } else if (page.id === "test-page") {
         console.log("open test-page");
         document.getElementById("back-test-btn").onclick = () => {
@@ -50,18 +56,14 @@
       }
 
       /// to show the result of the test
-      if (pushed) {
 
-      } else {
-        pushed = true;
-        //document.querySelector('#myNavigator').pushPage('test.html');
-      }
     });
 
   
   </script>
   
   <script src="components/matter.min.js"></script>
+  <script src="js/ObjectInfo.js"></script>
   <script src="js/my-matter.js"></script>
   <!-- script src="js/app.js"></script -->
   <script src="js/app_new.js"></script>
