--- a/www/main.html
+++ b/www/main.html
@@ -33,7 +33,7 @@
             <ons-list>
               <ons-list-item tappable onclick="change_shape('rect')">
                 <label class="left">
-                  <ons-radio name="object-shape" input-id="rect" checked></ons-radio>
+                  <ons-radio id="radio-shape-rect" name="object-shape" input-id="rect" checked></ons-radio>
                 </label>
                 <label for="rect" class="center">
                   長方形
@@ -41,7 +41,7 @@
               </ons-list-item>
               <ons-list-item tappable onclick="change_shape('circ')">
                 <label class="left">
-                  <ons-radio name="object-shape" input-id="circle"></ons-radio>
+                  <ons-radio id="radio-shape-circ" name="object-shape" input-id="circle"></ons-radio>
                 </label>
                 <label for="circle" class="center">
                   円
